test/tests/operators/from_http/from_http_error_invalid_method.txt
error: invalid http method: `wat`
 --> tests/operators/from_http/from_http_error_invalid_method.tql:5:51
  |
5 | from_http "https://example.org/data.json", method="wat" {
  |                                                   ^^^^^ 
  |
